src/test/compile-fail/attr-dangling-in-fn.rs
./src/test/compile-fail/attr-dangling-in-fn.rs:6:0:6:1: [1;31merror:[0m expected item
./src/test/compile-fail/attr-dangling-in-fn.rs:6 }
                                                 ^
rt: ---
rt: f00e:main:main:                   upcall fail 'explicit failure', src/comp/syntax/parse/parser.rs:112
rt: f00e:main:                        domain main @0x9fb104c root task failed
